<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Custom Toolbar -->
    <include layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <!-- Search input -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/search_recipes" />

        <!-- Filter button -->
        <ImageButton
            android:id="@+id/filterButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:src="@drawable/settings"
            android:scaleType="centerInside"
            android:background="@null"/>
    </LinearLayout>

    <!-- Filter button -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>